# kmf-kaspi-parser

./: .gitignore  README.md  pyproject.toml
src/kaspi_parser/: config.py  main.py  models.py  routers.py  util.py
tests/: conftest.py  test_routers.py  test_util.py
