[project]
name = "kaspi_parser"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Sabyr Shatekov", email = "shatekov.sabyr@gmail.com"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
